objects/nCBC__CBCConfigurationSoft__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>nCBC__CBCUrl__c</fullName>
        <label>CBC Url</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__LoginID__c</fullName>
        <label>Login ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__Password__c</fullName>
        <label>Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCBC__Timeout__c</fullName>
        <label>Timeout</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CBC Configuration Soft</label>
</CustomObject>